cambio en package.json

--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "packet-sender",
-  "version": "1.0.0",
-  "description": "Packet Sender for Node",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "packet",
-    "sender",
-    "udp",
-    "udp",
-    "sender",
-    "udp",
-    "reviever"
-  ],
-  "author": "Satelitech",
-  "license": "ISC",
-  "dependencies": {
-    "easy-table": "^1.2.0",
-    "inquirer": "^8.2.1"
-  }
+	"name": "packet-sender",
+	"version": "1.0.0",
+	"description": "Packet Sender for Node",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"packet",
+		"sender",
+		"udp",
+		"udp",
+		"sender",
+		"udp",
+		"reviever"
+	],
+	"author": "Alejandro Piumetti",
+	"license": "ISC",
+	"dependencies": {
+		"easy-table": "^1.2.0",
+		"inquirer": "^8.2.1"
+	}
 }
