--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
 	"description": "Packet Sender for Node",
 	"main": "index.js",
 	"scripts": {
+		"start": "node index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
 		"packet",
 		"sender",
 		"udp",
-		"udp",
-		"sender",
-		"udp",
-		"reviever"
+		"reciever"
 	],
 	"author": "Alejandro Piumetti",
 	"license": "ISC",
