--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
+		"help": "node index.js --help",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
